--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -1,8 +1,9 @@
 <mat-toolbar color="primary">
-    <div>
-        <button mat-icon-button (click)="onToggleLeftnav()">
+    <div style="font-size: 12px;">
+        測試用
+        <!-- <button mat-icon-button (click)="onToggleLeftnav()">
             <mat-icon>menu</mat-icon>
-        </button>
+        </button> -->
     </div>
     <div class="seprator"></div>
     <div>
