--- a/src/app/tea-shop/tea-shop.component.html
+++ b/src/app/tea-shop/tea-shop.component.html
@@ -4,6 +4,12 @@
     </div>
     <div class="txtbox">
         <strong>{{'tea_saloon.name'|translate}}</strong>
+
+        <p>武陵農場旅遊服務中心主要販賣日常用品(拖鞋、牙膏等)與大眾食品(餅乾、飲料、農特產品等)。
+           <br/> 假日提供雞絲麵、貢丸湯、關東煮、肉粽等熱食。
+            
+        </p>
+
         <br /> {{'tea_saloon.tel'|translate}}
         <br />{{'tea_saloon.fax'|translate}}
         <br /> {{'tea_saloon.address'|translate}}
