--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -11,6 +11,6 @@ mat-drawer-content{
 
 @media only screen and (max-width:480px) {
   mat-drawer{
-  width:calc(100vw );
+  width:calc(100vw - 40px );
 }
 }
