--- a/src/app/campsite/campsite.component.html
+++ b/src/app/campsite/campsite.component.html
@@ -1,7 +1,7 @@
 <div [@place]="isDivVisible">
   <mat-card>
     <mat-card-content>
-      <gallery id="camping" thumbWidth="0" thumbHeight="0" [items]="items" panSensitivity="400"></gallery>
+      <gallery id="camping" ></gallery>
       <article>
         {{'campsite.about'|translate}}
       </article>
