--- a/src/app/dashboard/main/main.component.html
+++ b/src/app/dashboard/main/main.component.html
@@ -9,6 +9,7 @@
             <app-weather-station></app-weather-station>
         </div>
         <div class="box status traffic">
+                <app-traffic-status></app-traffic-status>
         </div>
     </div>
 
