--- a/src/app/restaurant/restaurant.component.html
+++ b/src/app/restaurant/restaurant.component.html
@@ -7,7 +7,7 @@
             {{'restaurant.introduction'|translate}}
         </div>
     </div>
-    <gallery [items]="items" [panSensitivity]="400"    ></gallery>
+    <gallery id="restaurant" ></gallery>
     <br/>
     <div>
         <h1>{{'restaurant.fare'|translate}}</h1>
