--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import '~@ngx-gallery/core/styles/gallery.css';
+@import '~@ngx-gallery/core/styles/lightbox.css';
 
 html, body{
     /* font-family:'cwTeXKai', sans-serif; */
